# City-builder

./: .gitignore  .prettierignore  CLAUDE.md  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: debug.ts  loop.ts  newGame.ts  renderSync.ts  saveManager.ts  store.ts
src/i18n/: en.json  index.ts  ru.json
src/platform/: browser.ts  index.ts  tauri.ts  types.ts
src/render/: buildings.ts  camera.ts  input.ts  iso.test.ts  iso.ts  overlay.ts  roads.ts  scene.ts  tilemap.ts
src/render/atlas/: index.ts
src/sim/: commands.test.ts  commands.ts  mapgen.test.ts  mapgen.ts  newGame.ts  rng.ts  state.ts  tick.test.ts  tick.ts
src/sim/content/: balance.ts  buildings.ts  edicts.ts  eras.ts  goods.ts
src/sim/save/: migrations.ts  offline.ts  serialize.ts
src/sim/systems/: economy.ts  eras.ts  estates.ts  events.ts  factions.ts  modifiers.ts  population.ts  quests.ts  roads.test.ts  roads.ts
src/ui/: App.tsx
src/ui/hud/: Hud.tsx
src/ui/panels/: BuildPanel.tsx  index.ts
src/ui/windows/: index.ts
tools/: build-atlas.ts
