[package]
name = "city-builder"
version = "0.1.0"
description = "Isometric city-building simulator"
edition = "2021"

[lib]
name = "city_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
